--- a/bin/application/views/OrderManagement.fxml
+++ b/bin/application/views/OrderManagement.fxml
@@ -5,18 +5,25 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" prefWidth="800.0" prefHeight="500.0" style="-fx-background-color: #fff8f0;">
-    <VBox spacing="15" layoutX="30" layoutY="30" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="20" AnchorPane.bottomAnchor="20">
-        
-        <Label text="📦 Historique des Commandes" style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #8B4513;" />
-        
-        <TableView fx:id="ordersTable" prefHeight="400" style="-fx-background-color: white; -fx-border-color: #ccc; -fx-border-radius: 10; -fx-background-radius: 10;">
+<AnchorPane xmlns:fx="http://javafx.com/fxml" 
+            fx:controller="com.example.resto.OrderManagementController"
+            prefWidth="800.0" prefHeight="500.0" 
+            style="-fx-background-color: #fff8f0;">
+    <VBox spacing="15" layoutX="30" layoutY="30" 
+          AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" 
+          AnchorPane.topAnchor="20" AnchorPane.bottomAnchor="20">
+
+        <Label text="📦 Historique des Commandes" 
+               style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #8B4513;" />
+
+        <TableView fx:id="ordersTable" prefHeight="400" 
+                   style="-fx-background-color: white; -fx-border-color: #ccc; -fx-border-radius: 10; -fx-background-radius: 10;">
             <columns>
-                <TableColumn text="Commande ID" prefWidth="120"/>
-                <TableColumn text="Client" prefWidth="150"/>
-                <TableColumn text="Articles" prefWidth="250"/>
-                <TableColumn text="Statut" prefWidth="120"/>
-                <TableColumn text="Actions" prefWidth="100"/>
+                <TableColumn fx:id="orderIdColumn" text="Commande ID" prefWidth="120"/>
+                <TableColumn fx:id="clientColumn" text="Client" prefWidth="150"/>
+                <TableColumn fx:id="itemsColumn" text="Articles" prefWidth="250"/>
+                <TableColumn fx:id="statusColumn" text="Statut" prefWidth="120"/>
+                <TableColumn fx:id="actionsColumn" text="Actions" prefWidth="100"/>
             </columns>
         </TableView>
     </VBox>
